cs101_information_objects.nim

##
##   Copyright 2016 MZ Automation GmbH
##
##   This file is part of lib60870-C
##
##   lib60870-C is free software: you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation, either version 3 of the License, or
##   (at your option) any later version.
##
##   lib60870-C is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with lib60870-C.  If not, see <http://www.gnu.org/licenses/>.
##
##   See COPYING file for the complete license text.
##

## *
##  \file cs101_information_objects.h
##  \brief Functions for CS101/CS104 information objects
##  These are the implementation of the different data types and message types
##
## *
##  @defgroup COMMON Common API functions
##
##  @{
##
## *
##  \brief Message type IDs
##

import 
    iec60870_types

type
  IEC60870_5_TypeID* {.size: sizeof(cint).} = enum
    M_SP_NA_1 = 1,   M_SP_TA_1 = 2,   M_DP_NA_1 = 3,   M_DP_TA_1 = 4,   M_ST_NA_1 = 5, M_ST_TA_1 = 6,
    M_BO_NA_1 = 7,   M_BO_TA_1 = 8,   M_ME_NA_1 = 9,   M_ME_TA_1 = 10,  M_ME_NB_1 = 11,
    M_ME_TB_1 = 12,  M_ME_NC_1 = 13,  M_ME_TC_1 = 14,  M_IT_NA_1 = 15,  M_IT_TA_1 = 16,
    M_EP_TA_1 = 17,  M_EP_TB_1 = 18,  M_EP_TC_1 = 19,  M_PS_NA_1 = 20,  M_ME_ND_1 = 21,
    M_SP_TB_1 = 30,  M_DP_TB_1 = 31,  M_ST_TB_1 = 32,  M_BO_TB_1 = 33,  M_ME_TD_1 = 34,
    M_ME_TE_1 = 35,  M_ME_TF_1 = 36,  M_IT_TB_1 = 37,  M_EP_TD_1 = 38,  M_EP_TE_1 = 39,
    M_EP_TF_1 = 40,  C_SC_NA_1 = 45,  C_DC_NA_1 = 46,  C_RC_NA_1 = 47,  C_SE_NA_1 = 48,
    C_SE_NB_1 = 49,  C_SE_NC_1 = 50,  C_BO_NA_1 = 51,  C_SC_TA_1 = 58,  C_DC_TA_1 = 59,
    C_RC_TA_1 = 60,  C_SE_TA_1 = 61,  C_SE_TB_1 = 62,  C_SE_TC_1 = 63,  C_BO_TA_1 = 64,
    M_EI_NA_1 = 70,  C_IC_NA_1 = 100, C_CI_NA_1 = 101, C_RD_NA_1 = 102, C_CS_NA_1 = 103,
    C_TS_NA_1 = 104, C_RP_NA_1 = 105, C_CD_NA_1 = 106, C_TS_TA_1 = 107, P_ME_NA_1 = 110,
    P_ME_NB_1 = 111, P_ME_NC_1 = 112, P_AC_NA_1 = 113, F_FR_NA_1 = 120, F_SR_NA_1 = 121,
    F_SC_NA_1 = 122, F_LS_NA_1 = 123, F_AF_NA_1 = 124, F_SG_NA_1 = 125, F_DR_TA_1 = 126,
    F_SC_NB_1 = 127
  TypeID* = IEC60870_5_TypeID


proc TypeID_toString*(self: TypeID): cstring {.importc: "TypeID_toString",
     cdecl, cdecl .}


## *
##  \brief QDP - Quality descriptor for events of protection equipment according to IEC 60870-5-101:2003 7.2.6.4
##




#type
#  QualityDescriptor* = uint8_t  
#type
#  QualityDescriptorP* = uint8_t

type
    QualityDescriptor* = QualityDescriptorP
    QualityDescriptorP* {.size: sizeof(uint8_t).} = enum
        IEC60870_QUALITY_GOOD = 0
        IEC60870_QUALITY_OVERFLOW = 1
        IEC60870_QUALITY_RESERVED = 4
        IEC60870_QUALITY_ELAPSED_TIME_INVALID = 8
        IEC60870_QUALITY_BLOCKED = 0x10
        IEC60870_QUALITY_SUBSTITUTED = 0x20
        IEC60870_QUALITY_NON_TOPICAL = 0x40
        IEC60870_QUALITY_INVALID = 0x80

## *
##  \brief SPE - Start events of protection equipment according to IEC 60870-5-101:2003 7.2.6.11
##

type
  StartEvent* {.size: sizeof(uint8_t).} = enum
    IEC60870_START_EVENT_NONE = 0
    IEC60870_START_EVENT_GS = 0x00000001
    IEC60870_START_EVENT_SL1 = 0x00000002
    IEC60870_START_EVENT_SL2 = 0x00000004
    IEC60870_START_EVENT_SL3 = 0x00000008
    IEC60870_START_EVENT_SIE = 0x00000010
    IEC60870_START_EVENT_SRD = 0x00000020
    IEC60870_START_EVENT_RES1 = 0x00000040
    IEC60870_START_EVENT_RES2 = 0x00000080

## *
##  \brief Output circuit information (OCI) of protection equipment according to IEC 60870-5-101:2003 7.2.6.12
##

type
  OutputCircuitInfo* {.size: sizeof(uint8_t).} = enum
    IEC60870_OUTPUT_CI_GC = 0x00000001
    IEC60870_OUTPUT_CI_CL1 = 0x00000002
    IEC60870_OUTPUT_CI_CL2 = 0x00000004
    IEC60870_OUTPUT_CI_CL3 = 0x00000008

## *
##   \brief Qualifier of parameter of measured values (QPM) according to IEC 60870-5-101:2003 7.2.6.24
##
##   Possible values:
##   0 = not used
##   1 = threshold value
##   2 = smoothing factor (filter time constant)
##   3 = low limit for transmission of measured values
##   4 = high limit for transmission of measured values
##   5..31 = reserved for standard definitions of CS101 (compatible range)
##   32..63 = reserved for special use (private range)
##

type
  QualifierOfParameterMV* {.size: sizeof(uint8_t).} = enum
    IEC60870_QPM_NOT_USED = 0
    IEC60870_QPM_THRESHOLD_VALUE = 1
    IEC60870_QPM_SMOOTHING_FACTOR = 2
    IEC60870_QPM_LOW_LIMIT_FOR_TRANSMISSION = 3
    IEC60870_QPM_HIGH_LIMIT_FOR_TRANSMISSION = 4

## *
##  \brief Cause of Initialization (COI) according to IEC 60870-5-101:2003 7.2.6.21
##

type
  CauseOfInitialization* {.size: sizeof(uint8_t).} = enum
    IEC60870_COI_LOCAL_SWITCH_ON = 0
    IEC60870_COI_LOCAL_MANUAL_RESET = 1
    IEC60870_COI_REMOTE_RESET = 2

## *
##  \brief Qualifier Of Command (QOC) according to IEC 60870-5-101:2003 7.2.6.26
##

type
  QualifierOfCommand* {.size: sizeof(uint8_t).} = enum
    IEC60870_QOC_NO_ADDITIONAL_DEFINITION = 0
    IEC60870_QOC_SHORT_PULSE_DURATION = 1
    IEC60870_QOC_LONG_PULSE_DURATION = 2
    IEC60870_QOC_PERSISTANT_OUTPUT = 3

## *
##  \brief Select And Call Qualifier (SCQ) according to IEC 60870-5-101:2003 7.2.6.30
##

type
  SelectAndCallQualifier* {.size: sizeof(uint8_t).} = enum
    IEC60870_SCQ_DEFAULT = 0
    IEC60870_SCQ_SELECT_FILE = 1
    IEC60870_SCQ_REQUEST_FILE = 2
    IEC60870_SCQ_DEACTIVATE_FILE = 3
    IEC60870_SCQ_DELETE_FILE = 4
    IEC60870_SCQ_SELECT_SECTION = 5
    IEC60870_SCQ_REQUEST_SECTION = 6
    IEC60870_SCQ_DEACTIVATE_SECTION = 7

## *
##  \brief Qualifier of interrogation (QUI) according to IEC 60870-5-101:2003 7.2.6.22
##

type
  QualifierOfInterrogation* {.size: sizeof(uint8_t).} = enum
    IEC60870_QOI_STATION = 20
    IEC60870_QOI_GROUP_1 = 21
    IEC60870_QOI_GROUP_2 = 22
    IEC60870_QOI_GROUP_3 = 23
    IEC60870_QOI_GROUP_4 = 24
    IEC60870_QOI_GROUP_5 = 25
    IEC60870_QOI_GROUP_6 = 26
    IEC60870_QOI_GROUP_7 = 27
    IEC60870_QOI_GROUP_8 = 28
    IEC60870_QOI_GROUP_9 = 29
    IEC60870_QOI_GROUP_10 = 30
    IEC60870_QOI_GROUP_11 = 31
    IEC60870_QOI_GROUP_12 = 32
    IEC60870_QOI_GROUP_13 = 33
    IEC60870_QOI_GROUP_14 = 34
    IEC60870_QOI_GROUP_15 = 35
    IEC60870_QOI_GROUP_16 = 36

## *
##  \brief QCC (Qualifier of counter interrogation command) according to IEC 60870-5-101:2003 7.2.6.23
##
##  The QCC is composed by the RQT(request) and the FRZ(Freeze) part
##
##  QCC = RQT + FRZ
##
##  E.g.
##
##  to read the the values from counter group one use:
##
##    QCC = IEC60870_QCC_RQT_GROUP_1 + IEC60870_QCC_FRZ_READ
##
##  to reset all counters use:
##
##    QCC = IEC60870_QCC_RQT_GENERAL + IEC60870_QCC_FRZ_COUNTER_RESET
##
##

type
  QualifierOfCIC* {.size: sizeof(uint8_t).} = enum
    IEC60870_QCC_RQT_GROUP_1 = 1
    IEC60870_QCC_RQT_GROUP_2 = 2
    IEC60870_QCC_RQT_GROUP_3 = 3
    IEC60870_QCC_RQT_GROUP_4 = 4
    IEC60870_QCC_RQT_GENERAL = 5

const
    IEC60870_QCC_FRZ_READ* = 0x00
    IEC60870_QCC_FRZ_FREEZE_WITHOUT_RESET* = 0x40
    IEC60870_QCC_FRZ_FREEZE_WITH_RESET* = 0x80
    IEC60870_QCC_FRZ_COUNTER_RESET* = true #todo?

## *
##  \brief QRP (Qualifier of reset process command) according to IEC 60870-5-101:2003 7.2.6.27
##

type
  QualifierOfRPC* {.size: sizeof(cint).} = enum
    IEC60870_QRP_NOT_USED = 0
    IEC60870_QRP_GENERAL_RESET = 1
    IEC60870_QRP_RESET_PENDING_INFO_WITH_TIME_TAG = 2

## *
##  \brief Qualifier of parameter activation (QPA) according to IEC 60870-5-101:2003 7.2.6.25
##

type
  QualifierOfParameterActivation* {.size: sizeof(cint).} = enum
    IEC60870_QPA_NOT_USED = 0
    IEC60870_QPA_DE_ACT_PREV_LOADED_PARAMETER = 1
    IEC60870_QPA_DE_ACT_OBJECT_PARAMETER = 2
    IEC60870_QPA_DE_ACT_OBJECT_TRANSMISSION = 4

type
  SetpointCommandQualifier* = uint8_t

  DoublePointValue* {.size: sizeof(cint).} = enum
    IEC60870_DOUBLE_POINT_INTERMEDIATE = 0, IEC60870_DOUBLE_POINT_OFF = 1,
    IEC60870_DOUBLE_POINT_ON = 2, IEC60870_DOUBLE_POINT_INDETERMINATE = 3

  EventState* {.size: sizeof(cint).} = enum
    IEC60870_EVENTSTATE_INDETERMINATE_0 = 0, IEC60870_EVENTSTATE_OFF = 1,
    IEC60870_EVENTSTATE_ON = 2, IEC60870_EVENTSTATE_INDETERMINATE_3 = 3


## *
##  \brief Regulating step command state (RCS) according to IEC 60870-5-101:2003 7.2.6.17
##

type
  StepCommandValue* {.size: sizeof(cint).} = enum
    IEC60870_STEP_INVALID_0 = 0,
    IEC60870_STEP_LOWER = 1, 
    IEC60870_STEP_HIGHER = 2,
    IEC60870_STEP_INVALID_3 = 3
  
  tSingleEvent* = uint8_t
  SingleEvent* = ptr tSingleEvent


proc SingleEvent_setEventState*(self: SingleEvent; eventState: EventState) {.
    importc: "SingleEvent_setEventState",  cdecl.}
proc SingleEvent_getEventState*(self: SingleEvent): EventState {.
    importc: "SingleEvent_getEventState",  cdecl.}
proc SingleEvent_setQDP*(self: SingleEvent; qdp: QualityDescriptorP) {.
    importc: "SingleEvent_setQDP",  cdecl.}
proc SingleEvent_getQDP*(self: SingleEvent): QualityDescriptorP {.
    importc: "SingleEvent_getQDP",  cdecl.}
type
  tStatusAndStatusChangeDetection* = sStatusAndStatusChangeDetection
  StatusAndStatusChangeDetection* = ptr tStatusAndStatusChangeDetection
  sStatusAndStatusChangeDetection* {.bycopy.} = object
    encodedValue*: array[4, uint8_t]


proc StatusAndStatusChangeDetection_getSTn*(self: StatusAndStatusChangeDetection): uint16_t {.
    importc: "StatusAndStatusChangeDetection_getSTn",  cdecl.}
proc StatusAndStatusChangeDetection_getCDn*(self: StatusAndStatusChangeDetection): uint16_t {.
    importc: "StatusAndStatusChangeDetection_getCDn",  cdecl.}
proc StatusAndStatusChangeDetection_setSTn*(self: StatusAndStatusChangeDetection;
    value: uint16_t) {.importc: "StatusAndStatusChangeDetection_setSTn",
                      cdecl.}
proc StatusAndStatusChangeDetection_getST*(self: StatusAndStatusChangeDetection;
    index: cint): bool {.importc: "StatusAndStatusChangeDetection_getST",
                       cdecl.}
proc StatusAndStatusChangeDetection_getCD*(self: StatusAndStatusChangeDetection;
    index: cint): bool {.importc: "StatusAndStatusChangeDetection_getCD",
                       cdecl.}
## ***********************************************
##  InformationObject
## **********************************************

include "cs101_information_objects_cpp.nim"

## *
##  \brief return the size in memory of a generic InformationObject instance
##
##  This function can be used to determine the required memory for malloc
##

proc InformationObject_getMaxSizeInMemory*(): cint {.
    importc: "InformationObject_getMaxSizeInMemory",  cdecl.}
proc InformationObject_getObjectAddress*(self: InformationObject): cint {.
    importc: "InformationObject_getObjectAddress",  cdecl.}
proc InformationObject_getType*(self: InformationObject): TypeID {.
    importc: "InformationObject_getType",  cdecl.}
## *
##  \brief Destroy object - free all related resources
##
##  This is a virtual function that calls the destructor from the implementation class
##
##  \self the InformationObject instance
##

proc InformationObject_destroy*(self: InformationObject) {.
    importc: "InformationObject_destroy", cdecl.}
## ***********************************************
##  SinglePointInformation (:InformationObject)
## **********************************************

include "information_objects_internal.nim"

type
  SinglePointInformation* = ptr sSinglePointInformation
